--- a/styles/style.css
+++ b/styles/style.css
@@ -75,7 +75,7 @@ a:hover{
 	margin:0 0 20px 0;
 }
 #header #header-content{
-	float:left;
+	float:right;
 	width:450px;
 }
 #header #header-content h1{
@@ -105,7 +105,7 @@ a:hover{
 	float:left;
 }
 #header #header-photo{
-	float:right;
+	float:left;
 	background-color:#eee;
 	padding:5px 5px 2px 5px;
 	-webkit-box-shadow:0 0 10px #aaa;
@@ -113,8 +113,8 @@ a:hover{
 	box-shadow:0 0 10px #aaa;
 }
 #header #header-photo img{
-	width:210px;
-	height:210px;
+	width:280px;
+	height:280px;
 	border:1px #ddd solid;
 }
 /* ------------- */
@@ -141,19 +141,19 @@ a:hover{
 #content .cv-section p{
 	font-size:14px;
 	color:#555;
-	letter-spacing:0;
+	letter-spacing:0px;
 }
 #content .cv-section-item{
 	padding:0 0 0 0;
 }
 
 .fa {
-  padding: 8px;
+  padding: 12px;
   font-size: 10px;
   width: 15px;
   text-align: center;
   text-decoration: none;
-  margin: 2px 3px;
+  margin: 7px 7px;
   border-radius: 50%;
 }
 
@@ -189,4 +189,8 @@ a:hover{
 .fa-weibo {
   background: #E74C3C;
   color: white;
+}
+
+li{
+    margin: 10px 0;
 }
